--- a/netlify.toml
+++ b/netlify.toml
@@ -17,11 +17,13 @@
 # Headers rule example
 # For more information see:- https://www.netlify.com/docs/netlify-toml-reference/
 
-#[[headers]]
+[[headers]]
 #   Define which paths this specific [[headers]] block will cover.
-#   for = "/*"
+   for = "/*"
 
-#[headers.values]
+[headers.values]
+    #  Multi-value headers are expressed with multi-line strings
+	cache-control= "max-age=3600"
 #   X-Frame-Options = "DENY"
 #   X-XSS-Protection = "1; mode=block"
 #   Content-Security-Policy = "frame-ancestors https://www.facebook.com"
