--- a/admin/config.yml
+++ b/admin/config.yml
@@ -23,7 +23,8 @@ collections:
     fields: # The fields for each document, usually in front matter
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Publish Date", name: "date", widget: "datetime" }
-      - { label: "Author", name: "author", widget: "string", default: "Uku Sõrmus" }
+      # - { label: "Author", name: "author", widget: "string", default: "Uku Sõrmus" }
+      - { label: "Featured Image", name: "thumbnail", widget: "image" }
       - { label: "Summary", name: "summary", widget: "text" }
       - { label: "Tags", name: "tags", widget: "list", default: ["post"] }
       - { label: "Body", name: "body", widget: "markdown" }
